<resources>
    <string name="app_name">EcoLiving</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="login_text">Login</string>
    <string name="register_text">Sign Up</string>
    <string name="login_welcome_text">Welcome back to&#xA;Go-EcoLiving.</string>
    <string name="login_welcome_text2">You’ve been missed!</string>
    <string name="register_welcome_text">Welcome to&#xA;Go-EcoLiving.</string>
    <string name="register_welcome_text2">Let’s begin the journey!</string>
    <string name="go_register_text">Don’t have any account? <b>Sign Up</b></string>
    <string name="go_login_text">Already have an account? <b>Login</b></string>


    <string name="page_one_onboard_title">Make a positive impact for our planet</string>

    <string name="page_one_onboard_desc">By understand and reduce your carbon footprint—step by step.</string>

    <string name="page_two_onboard_title">Measure, Reduce, Thrive</string>

    <string name="page_two_onboard_desc">Track your emissions and discover personalized tips to make a lasting impact on the planet.</string>

    <string name="page_three_onboard_title">Your Path to a Greener Life</string>

    <string name="page_three_onboard_desc">Understand your carbon impact and take meaningful steps toward sustainability with GoEco-Living.</string>


    <string name="hi_name">Hi, </string>
    <string name="hi_last">!</string>
    <string name="dashboard_lets">Lets Track and Improve Our Environmental Impact!</string>
    <string name="start_calculating">Start Calculating</string>
    <string name="track_eco">Track your eco progress</string>
    <string name="name_app_sementara">GoEco-Living</string>
    <string name="my_profile">My Profile</string>

    <string name="my_activities">activities</string>
    <string name="my_eco">My Eco</string>
    <string name="my_water">Water</string>
    <string name="my_c02">C02</string>
    <string name="overview">Overview</string>
    <string name="plastic">Plastic</string>
    <string name="text_cup">Reusable cup</string>
    <string name="text_shopping_bag">Reusable shopping bag</string>
    <string name="text_bottle">Reusable bottle</string>

    <string name="meals">Meals</string>
    <string name="text_vegan">Vegan meals</string>
    <string name="text_vegetarian">Vegetarian meals</string>
    <string name="text_fish">Fish</string>

    <string name="transport">Transport</string>
    <string name="text_walk">Walk</string>
    <string name="text_biking">Biking</string>
    <string name="text_public_transport">Public Transport</string>

    <string name="profile_text">My Profile</string>
    <string name="email_profile_text">emailuser@gmail.com</string>
    <string name="account_text">Account</string>
    <string name="general_text">General</string>
    <string name="language_text">Language</string>
    <string name="logout_text">Logout</string>
    <string name="about_text">About Us</string>
    <string name="privacy_text">Privacy Policy</string>
    <string name="rate_text">Rate GoEco-Living</string>

    <string name="activity_main_text">Add your Activity</string>
    <string name="sub_activity_text">Select an Activity to Track</string>
    <string name="plastic_activity_text">Plastic</string>
    <string name="meal_activity_text">Meals</string>
    <string name="transport_activity_text">Transport</string>
    <string name="info_activity_text">This feature allows you to choose from two categories: Plastic, Meals, and Transport. By adding activities, you can monitor the environmental impact of your daily habits.
</string>

    <string name="plastic_header_text">I have just used</string>
    <string name="option_activity_text">Please pick one</string>
    <string name="reusable_cup_option">Reusable&#xA;cup</string>
    <string name="reusable_shopping_bag_option">Reusable&#xA;shopping bag</string>
    <string name="reusable_bottle_option">Reusable&#xA;bottle</string>

    <string name="meals_header_text">I have just eat</string>
    <string name="vegan_option">Vegan</string>
    <string name="vegetarian_option">Vegetarian</string>
    <string name="fish_option">Fish</string>
    <string name="chicken_option">Chicken</string>
    <string name="beef_option">Beef</string>

    <string name="transport_header_text">I went by</string>
    <string name="car_option">Car</string>
    <string name="motorbike_option">Motorcycle</string>
    <string name="public_transport_option">Public Transportation</string>
    <string name="walk_option">Walk</string>
    <string name="bike_option">Bike</string>

    <string name="login_dialog_title">Login Failed</string>
    <string name="close_dialog_title">Close</string>

    <string name="register_dialog_title">Register Success</string>
    <string name="login_dialog_error_title">Register Failed</string>

    <string name="total_carbon_title">Total Carbon</string>
    <string name="total_carbon_result">-</string>

    <string name="meals_history_title">Meals Activity</string>
    <string name="transport_history_title">Transport Activity</string>
    <string name="tips_title">Eco Tips</string>


    <string name="transport_tips_title">Your transport has a high carbon footprint.Consider using Public Transport or walking.</string>
    <string name="meals_tips_title">Great choice! Your meal has a low carbon footprint.</string>

    <string name="history_carbon_result">10.5</string>

    <string name="distance_text">Distance:</string>
    <string name="distance_value">0</string>
    <string name="miles_text">miles</string>

    <string name="continue_text">Continue</string>

    <string name="your_activity_text">Your Activity</string>
    <string name="sub_transport_text"> Results from Your Transport Choice</string>

    <string name="activity_text">Activity</string>
    <string name="item_text">Item</string>

    <string name="result_transport_activity">You’ve contributed</string>
    <string name="result_transport_carbon">0.0</string>
    <string name="carbon_text">% carbon</string>

    <string name="sub_meals_text">Results from Your Meals Choice</string>

    <string name="save_activity_text">Save Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>