<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ecoliving.mobile.presentation.ui.activity.transport.TransportResultFragment">

    <RelativeLayout
        android:id="@+id/header_result_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/header_result_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_activity_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sub_result_activity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_result_activity"
        android:gravity="center"
        android:text="@string/sub_transport_text"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/chosen_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_result_activity_text"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/walk_option"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/ic_circle_water"
                android:scaleType="center"
                android:src="@drawable/car_transport_navigation_svgrepo_com"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                app:tint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/chosen_transport_option"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_orange"
                android:scaleType="center"
                android:src="@drawable/bike"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/chosen_transport_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike_option"
                android:textColor="@color/black"
                android:maxLength="16"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:strokeColor="@color/green"
        app:strokeWidth="1dp"
        app:cardCornerRadius="15dp"
        android:layout_below="@id/chosen_activity"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="@string/result_transport_activity"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/carbon_emission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_transport_carbon"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/carbon_text"
                android:textSize="14sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/green"
        android:text="@string/save_activity_text"
        app:cornerRadius="20dp" />
</RelativeLayout>