<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ecoliving.mobile.presentation.ui.activity.transport.DetailsTransportActivityFragment">

    <RelativeLayout
        android:id="@+id/transport_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/header_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transport_header_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/transport_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transport_detail"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageButton
            android:id="@+id/transport_option"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_circle_water"
            android:scaleType="center"
            android:src="@drawable/motorbike_svgrepo_com"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/option_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorbike_option"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLength="16"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transport_image"
        android:layout_marginStart="20dp"
        android:text="@string/distance_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chosen_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transport_image"
        android:layout_marginStart="6dp"
        android:layout_toEndOf="@+id/distance_text"
        android:text="@string/distance_value"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transport_image"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/chosen_distance"
        android:text="@string/miles_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_text"
        android:layout_centerInParent="true"
        android:value="5"
        android:valueFrom="0"
        android:valueTo="100"
        app:thumbColor="@color/grey"
        app:thumbHeight="30dp"
        app:trackColorActive="@color/green"
        app:trackColorInactive="@color/grey"
        app:trackHeight="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/green"
        android:text="@string/continue_text"
        app:cornerRadius="20dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        tools:visibility="visible"
        app:indicatorColor="@color/dark_grey"/>
</RelativeLayout>