<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ecoliving.mobile.presentation.ui.activity.addactivity.AddActivityMainFragment">

    <RelativeLayout
        android:id="@+id/activiy_main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/header_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_main_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_activity_text"
            android:gravity="center"
            android:text="@string/sub_activity_text"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activty_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activiy_main_header"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/meals_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonMeals"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_circle_myeco"
                android:scaleType="center"
                android:src="@drawable/meals_40dp"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_activity_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meals_activity"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonTransport"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_circle_water"
                android:scaleType="center"
                android:src="@drawable/car_transport_navigation_svgrepo_com"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport_activity_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/info_activity_text"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activty_option"
        android:layout_marginStart="35dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_activity_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>